--- a/nagsa/nagsa/Report24.rdlc
+++ b/nagsa/nagsa/Report24.rdlc
@@ -644,7 +644,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>NOTA RETUR JUAL</Value>
+                  <Value>NOTA RETUR Beli</Value>
                   <Style />
                 </TextRun>
               </TextRuns>
