--- a/nagsa/nagsa/Report22.rdlc
+++ b/nagsa/nagsa/Report22.rdlc
@@ -706,7 +706,7 @@
   <Width>8.85827in</Width>
   <Page>
     <PageHeader>
-      <Height>2.54cm</Height>
+      <Height>1.87854cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -730,7 +730,7 @@
           </Paragraphs>
           <rd:DefaultName>no_nota_pembelian</rd:DefaultName>
           <Height>0.6cm</Height>
-          <Width>5cm</Width>
+          <Width>6.23062cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
@@ -741,7 +741,7 @@
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
-        <Textbox Name="kode_supplier">
+        <Textbox Name="Textbox4">
           <CanGrow>true</CanGrow>
           <KeepTogether>true</KeepTogether>
           <Paragraphs>
@@ -752,18 +752,17 @@
                   <Style />
                 </TextRun>
                 <TextRun>
-                  <Value>=First(Fields!kode_supplier.Value, "DataSet2")</Value>
+                  <Value>=Parameters!kodesupp.Value</Value>
                   <Style />
                 </TextRun>
               </TextRuns>
               <Style />
             </Paragraph>
           </Paragraphs>
-          <rd:DefaultName>kode_supplier</rd:DefaultName>
+          <rd:DefaultName>Textbox4</rd:DefaultName>
           <Top>0.77639cm</Top>
-          <Left>0cm</Left>
           <Height>0.6cm</Height>
-          <Width>5cm</Width>
+          <Width>5.27812cm</Width>
           <ZIndex>1</ZIndex>
           <Style>
             <Border>
@@ -775,41 +774,7 @@
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
-        <Textbox Name="tanggal_jt_pembelian">
-          <CanGrow>true</CanGrow>
-          <KeepTogether>true</KeepTogether>
-          <Paragraphs>
-            <Paragraph>
-              <TextRuns>
-                <TextRun>
-                  <Value>Jatuh Tempo: </Value>
-                  <Style />
-                </TextRun>
-                <TextRun>
-                  <Value>=First(Fields!tanggal_jt_pembelian.Value, "DataSet2")</Value>
-                  <Style />
-                </TextRun>
-              </TextRuns>
-              <Style />
-            </Paragraph>
-          </Paragraphs>
-          <rd:DefaultName>tanggal_jt_pembelian</rd:DefaultName>
-          <Top>1.55278cm</Top>
-          <Left>0cm</Left>
-          <Height>0.6cm</Height>
-          <Width>7.5cm</Width>
-          <ZIndex>2</ZIndex>
-          <Style>
-            <Border>
-              <Style>None</Style>
-            </Border>
-            <PaddingLeft>2pt</PaddingLeft>
-            <PaddingRight>2pt</PaddingRight>
-            <PaddingTop>2pt</PaddingTop>
-            <PaddingBottom>2pt</PaddingBottom>
-          </Style>
-        </Textbox>
-        <Textbox Name="tanggal_pembelian">
+        <Textbox Name="Textbox8">
           <CanGrow>true</CanGrow>
           <KeepTogether>true</KeepTogether>
           <Paragraphs>
@@ -820,18 +785,18 @@
                   <Style />
                 </TextRun>
                 <TextRun>
-                  <Value>=First(Fields!tanggal_pembelian.Value, "DataSet2")</Value>
+                  <Value>=Parameters!tgl.Value</Value>
                   <Style />
                 </TextRun>
               </TextRuns>
               <Style />
             </Paragraph>
           </Paragraphs>
-          <rd:DefaultName>tanggal_pembelian</rd:DefaultName>
-          <Left>16.16417cm</Left>
+          <rd:DefaultName>Textbox6</rd:DefaultName>
+          <Left>15.83312cm</Left>
           <Height>0.6cm</Height>
-          <Width>6.33583cm</Width>
-          <ZIndex>3</ZIndex>
+          <Width>6.66688cm</Width>
+          <ZIndex>2</ZIndex>
           <Style>
             <Border>
               <Style>None</Style>
@@ -854,29 +819,29 @@
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
-        <Textbox Name="total_harga_pembelian">
+        <Textbox Name="Textbox6">
           <CanGrow>true</CanGrow>
           <KeepTogether>true</KeepTogether>
           <Paragraphs>
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>Total: </Value>
+                  <Value>Total Harga: </Value>
                   <Style />
                 </TextRun>
                 <TextRun>
-                  <Value>=Sum(Fields!total_harga_pembelian.Value, "DataSet2")</Value>
+                  <Value>=Parameters!totalharga.Value</Value>
                   <Style />
                 </TextRun>
               </TextRuns>
               <Style />
             </Paragraph>
           </Paragraphs>
-          <rd:DefaultName>total_harga_pembelian</rd:DefaultName>
+          <rd:DefaultName>Textbox6</rd:DefaultName>
           <Top>0.17639cm</Top>
-          <Left>18.35958cm</Left>
+          <Left>16.94438cm</Left>
           <Height>0.6cm</Height>
-          <Width>4.14042cm</Width>
+          <Width>5.55563cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
@@ -978,47 +943,21 @@
         <rd:TableAdapterName>detail_pembelianTableAdapter</rd:TableAdapterName>
       </rd:DataSetInfo>
     </DataSet>
-    <DataSet Name="DataSet2">
-      <Query>
-        <DataSourceName>apotikDataSet</DataSourceName>
-        <CommandText>/* Local Query */</CommandText>
-      </Query>
-      <Fields>
-        <Field Name="no_nota_pembelian">
-          <DataField>no_nota_pembelian</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="tanggal_pembelian">
-          <DataField>tanggal_pembelian</DataField>
-          <rd:TypeName>System.DateTime</rd:TypeName>
-        </Field>
-        <Field Name="kode_supplier">
-          <DataField>kode_supplier</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="tanggal_jt_pembelian">
-          <DataField>tanggal_jt_pembelian</DataField>
-          <rd:TypeName>System.DateTime</rd:TypeName>
-        </Field>
-        <Field Name="total_harga_pembelian">
-          <DataField>total_harga_pembelian</DataField>
-          <rd:TypeName>System.UInt32</rd:TypeName>
-        </Field>
-        <Field Name="delete">
-          <DataField>delete</DataField>
-          <rd:TypeName>System.UInt32</rd:TypeName>
-        </Field>
-      </Fields>
-      <rd:DataSetInfo>
-        <rd:DataSetName>apotikDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\windows\Documents\GitHub\magang-nagsalaya\nagsa\nagsa\apotikDataSet.xsd</rd:SchemaPath>
-        <rd:TableName>pembelian</rd:TableName>
-        <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
-        <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
-        <rd:TableAdapterName>pembelianTableAdapter</rd:TableAdapterName>
-      </rd:DataSetInfo>
-    </DataSet>
   </DataSets>
+  <ReportParameters>
+    <ReportParameter Name="kodesupp">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="totalharga">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="tgl">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+  </ReportParameters>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
   <rd:ReportID>ec1c250f-29a8-4124-aff5-66e22b1971a4</rd:ReportID>
 </Report>
