--- a/nagsa/nagsa/Report25.rdlc
+++ b/nagsa/nagsa/Report25.rdlc
@@ -687,7 +687,6 @@
           </Paragraphs>
           <rd:DefaultName>Textbox18</rd:DefaultName>
           <Top>1.3462cm</Top>
-          <Left>0cm</Left>
           <Height>0.6cm</Height>
           <Width>5.3575cm</Width>
           <ZIndex>1</ZIndex>
@@ -721,7 +720,6 @@
           </Paragraphs>
           <rd:DefaultName>Textbox19</rd:DefaultName>
           <Top>2.12259cm</Top>
-          <Left>0cm</Left>
           <Height>0.6cm</Height>
           <Width>5.3575cm</Width>
           <ZIndex>2</ZIndex>
@@ -755,10 +753,43 @@
           </Paragraphs>
           <rd:DefaultName>Textbox20</rd:DefaultName>
           <Top>2.89898cm</Top>
-          <Left>0cm</Left>
           <Height>0.6cm</Height>
           <Width>5cm</Width>
           <ZIndex>3</ZIndex>
+          <Style>
+            <Border>
+              <Style>None</Style>
+            </Border>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
+        <Textbox Name="Textbox1">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>Tanggal: </Value>
+                  <Style />
+                </TextRun>
+                <TextRun>
+                  <Value>=Parameters!tgl.Value</Value>
+                  <Style />
+                </TextRun>
+              </TextRuns>
+              <Style />
+            </Paragraph>
+          </Paragraphs>
+          <rd:DefaultName>Textbox1</rd:DefaultName>
+          <Top>1.3462cm</Top>
+          <Left>14.65474cm</Left>
+          <Height>0.6cm</Height>
+          <Width>5.34526cm</Width>
+          <ZIndex>4</ZIndex>
           <Style>
             <Border>
               <Style>None</Style>
@@ -920,6 +951,10 @@
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
     <ReportParameter Name="totalharga">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="tgl">
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
